Separa los alumnos aceptados en turnos
Pues eso xD

--- a/app/views/groups/generate.html.erb
+++ b/app/views/groups/generate.html.erb
@@ -14,6 +14,7 @@
           <th>Calificacion Secundaria</th>
           <th>Especialidad Primaria</th>
           <th>Especilidad Secundaria</th>
+          <th>Es foraneo</th>
         </tr>
       </thead>
       <tbody>
@@ -26,6 +27,7 @@
             <td><%= accept.schoolAverage %></td>
             <td><%= accept.speciality %></td>
             <td><%= accept.secondSpeciality %></td>
+            <td><%= accept.isForeign%></td>
           </tr>
           <% end %>
         <% end %>
@@ -43,6 +45,7 @@
           <th>Calificacion Secundaria</th>
           <th>Especialidad Primaria</th>
           <th>Especilidad Secundaria</th>
+          <th>Es foraneo</th>
         </tr>
       </thead>
       <tbody>
@@ -55,6 +58,7 @@
             <td><%= accept.schoolAverage %></td>
             <td><%= accept.speciality %></td>
             <td><%= accept.secondSpeciality %></td>
+            <td><%= accept.isForeign %></td>
           </tr>
           <% end %>
         <% end %>
