--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,1 +1,7 @@
-<h1>Aqui no hay nada</h1>
+<div class="baseBox main">
+  <section>
+    <div class="baseBox">
+      <% render 'header' %>
+    </div>
+  </section>
+</div>
