--- a/app/views/groups/generate.html.erb
+++ b/app/views/groups/generate.html.erb
@@ -1,65 +1,1 @@
-<div class="baseBox">
-  <header>
-    <h1>Prueba meh</h1>
-  </header>
-  <section>
-    <h2>Turno Matutiono</h2>
-    <!-- Inicia !-->
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Nombre</th>
-          <th>Calificacion Examen</th>
-          <th>Calificacion Secundaria</th>
-          <th>Especialidad Primaria</th>
-          <th>Especilidad Secundaria</th>
-          <th>Es foraneo</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @acceptedM.each do |accept| %>
-        <tr>
-          <td><%= accept.id %></td>
-          <td><%= accept.name %></td>
-          <td><%= accept.examMark %></td>
-          <td><%= accept.schoolAverage %></td>
-          <td><%= accept.speciality %></td>
-          <td><%= accept.secondSpeciality %></td>
-          <td><%= accept.isForeign%></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <!-- Acaba !-->
-    <h2>Turno Vespertino</h2>
-    <!-- Inicia !-->
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Nombre</th>
-          <th>Calificacion Examen</th>
-          <th>Calificacion Secundaria</th>
-          <th>Especialidad Primaria</th>
-          <th>Especilidad Secundaria</th>
-          <th>Es foraneo</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @acceptedV.each do |accept| %>
-        <tr>
-          <td><%= accept.id %></td>
-          <td><%= accept.name %></td>
-          <td><%= accept.examMark %></td>
-          <td><%= accept.schoolAverage %></td>
-          <td><%= accept.speciality %></td>
-          <td><%= accept.secondSpeciality %></td>
-          <td><%= accept.isForeign %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <!-- Acaba !-->
-  </section>
-</div>
+<%= render 'matutino' %>
