--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <div class="baseBox main">
+  <%= render 'header' %>
   <section>
     <div class="baseBox">
-      <% render 'header' %>
     </div>
   </section>
 </div>
