--- a/app/views/groups/generate.html.erb
+++ b/app/views/groups/generate.html.erb
@@ -1,1 +1,8 @@
-<%= render 'matutino' %>
+<div>
+  <%= render 'header' %>
+  <section>
+    <div>
+      <%= render 'matutino' %>
+    </div>
+  </section>
+</div>
