--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,15 @@
-<div class="baseBox main">
+<div>
   <%= render 'header' %>
-  <section>
+  <section class="sideBar">
     <div class="baseBox">
+      <h2>Bienvenido</h2>
+    </div>
+  </section>
+  <section>
+    <div = class="baseBox">
+      <div class="subtitle">
+        <h2>Generar grupos</h2>
+      </div>
     </div>
   </section>
 </div>
