--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,41 +1,48 @@
-<p id="notice"><%= notice %></p>
+<div>
+  <%= render 'header' %>
+  <section>
+    <div>
+      <p id="notice"><%= notice %></p>
 
-<h1>Listing Requests</h1>
-<p>Cantidad de registros actual: <%= Request.all.length %> </p>
-<p>Cantidad de recomendados actual: <%= Request.where(isRecommended: true).length %> </p>
-<p>Cantidad de foraneaos actual: <%= Request.where(isForeign: true).length %> </p>
-<%= link_to 'New Request', new_request_path %>
+      <h1>Listing Requests</h1>
+      <p>Cantidad de registros actual: <%= Request.all.length %> </p>
+      <p>Cantidad de recomendados actual: <%= Request.where(isRecommended: true).length %> </p>
+      <p>Cantidad de foraneaos actual: <%= Request.where(isForeign: true).length %> </p>
+      <%= link_to 'New Request', new_request_path %>
 
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Exammark</th>
-      <th>Schoolaverage</th>
-      <th>Isrecommended</th>
-      <th>Isforeign</th>
-      <th>Speciality</th>
-      <th>Secondspeciality</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Exammark</th>
+            <th>Schoolaverage</th>
+            <th>Isrecommended</th>
+            <th>Isforeign</th>
+            <th>Speciality</th>
+            <th>Secondspeciality</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-  <tbody>
-    <% @requests.each do |request| %>
-      <tr>
-        <td><%= request.id %></td>
-        <td><%= request.name %></td>
-        <td><%= request.examMark %></td>
-        <td><%= request.schoolAverage %></td>
-        <td><%= request.isRecommended %></td>
-        <td><%= request.isForeign %></td>
-        <td><%= request.speciality %></td>
-        <td><%= request.secondSpeciality %></td>
-        <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <tbody>
+          <% @requests.each do |request| %>
+            <tr>
+              <td><%= request.id %></td>
+              <td><%= request.name %></td>
+              <td><%= request.examMark %></td>
+              <td><%= request.schoolAverage %></td>
+              <td><%= request.isRecommended %></td>
+              <td><%= request.isForeign %></td>
+              <td><%= request.speciality %></td>
+              <td><%= request.secondSpeciality %></td>
+              <td><%= link_to 'Show', request %></td>
+              <td><%= link_to 'Edit', edit_request_path(request) %></td>
+              <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </section>
+</div>
