--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,14 +1,23 @@
 <div>
   <%= render 'header' %>
-  <section class="sideBar">
-    <div class="baseBox">
-      <h2>Bienvenido</h2>
+  <aside class="sideBar">
+    <div class="subtitle baseBox">
+      <h2>Acciones</h2>
     </div>
-  </section>
-  <section>
-    <div = class="baseBox">
-      <div class="subtitle">
-        <h2>Generar grupos</h2>
+  </aside>
+  <section class="content">
+    <div>
+      <div class="subtitle baseBox">
+        <span class="icon-file-text2 baseBox"></span>
+        <div>
+          <h2>Generar grupos</h2>
+          <p>Aquí puedes generar los grupos de forma definitiva.</p>
+        </div>
+      </div>
+      <div class="info">
+        <p>
+          En este apartado puedes generar
+        </p>
       </div>
     </div>
   </section>
