--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -7,7 +7,7 @@
     <nav>
       <ul>
         <li>
-          <%= link_to 'Home' %>
+          <%= link_to 'Inicio' %>
         </li>
         <li>
           <%= link_to 'Solicitudes' %>
