--- a/app/views/requests/_header.html.erb
+++ b/app/views/requests/_header.html.erb
@@ -7,7 +7,7 @@
     <nav>
       <ul>
         <li>
-          <%= link_to 'Home' %>
+          <%= link_to 'Inicio', requests_path %>
         </li>
         <li>
           <%= link_to 'Solicitudes' %>
