--- a/app/views/public/developers.html.erb
+++ b/app/views/public/developers.html.erb
@@ -12,10 +12,10 @@
     <section class="content">
       <div>
         <div class="subtitle baseBox">
-          <span class="icon baseBox"></span>
+          <span class="icon-terminal baseBox"></span>
           <div>
-            <h2></h2>
-            <p></p>
+            <h2>Desarrolladores</h2>
+            <p>¿Son de un CBTis?</p>
           </div>
         </div>
         <div class="info">
