--- a/app/assets/stylesheets/requests.scss
+++ b/app/assets/stylesheets/requests.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Requests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/****************
+*    Acciones   *
+****************/
+.hiddenAction{
+  background-color: white;
+  border-radius: 3px;
+  border: solid 1px;
+  border-color: #d4d4d4;
+  display: none;
+  width: 87%;
+  height: 80%;
+  margin-left: 4%;
+}
